# Klasifikasi-Motif-Batik-Indonesia

./: .gitignore  README.md  pyproject.toml  requirements.txt
batik/: model.utils.py  test.py
