[project]
name = "Modul6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["streamlit==1.37.0", "tensorflow>=2.18.0", "joblib>=1.4.2", "scikit-learn>=1.6.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dependencies]
tensorflow = "*"

